# sage

./: .env  .gitignore  Justfile  README.md  flake.nix  go.mod  go.sum  justfile  main.go  shell.nix
figure/: main.jl
julia/: main.jl
nurse/: Cargo.toml  sage.txt
nurse/src/: main.rs
